--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title><%= title %> of HPNeo</title>
   <%= stylesheet_link_tag :all %>
+  <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tag %>
 </head>
 <body>
