--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -10,6 +10,10 @@ h1#title{
 	color:#444444;
 	text-shadow:#707070 1px 1px 0px;
 }
+h1#title a{
+	color:#444444;
+	text-decoration:none;
+}
 #days{
 	list-style:none;
 	width:810px;
@@ -58,6 +62,8 @@ h1#title{
 }
 #day #day_contents{
 	display:none;
-	width:100%;
-	height:100%;
+	width:60%;
+	height:400px;
+	position:absolute;
+	z-index:2;
 }
