Uniformidad de estilos en todo el sitio

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -27,7 +27,9 @@ h1#title a{
 		height:100px;
 		margin:1px;
 		padding:0;
-		background:#eeeeee;
+		background:#5B5B5B;
+		box-shadow:#707070 1px 1px 0px;
+		border-radius:3px;
 	}
 		#days li a{
 			display:block;
@@ -35,23 +37,19 @@ h1#title a{
 			height:100px;
 			text-align:center;
 			text-decoration:none;
-			color:#853718;
+			color:#515151;
+			text-shadow:#666666 1px 1px 0px;
 			font-size:2em;
-		}
-		#days li a:hover{
-			color:#b94d21;
 		}
 #day{
 	display:block;
 	width:60%;
-	height:400px;
 	margin:0 auto;
 }
 	#day h2#day_number{
 		display:block;
 		position:absolute;
 		width:60%;
-		height:400px;
 		color:#5b5b5b;
 		font-size:12em;
 		margin:0;
@@ -63,12 +61,10 @@ h1#title a{
 	#day #day_contents{
 		display:none;
 		width:60%;
-		height:400px;
 		position:absolute;
 		z-index:2;
 	}
 		#day #day_contents .day_content{
 			display:block;
 			width:200px;
-			float:left;
 		}
