--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -64,7 +64,11 @@ h1#title a{
 		position:absolute;
 		z-index:2;
 	}
-		#day #day_contents .day_content, #day #day_contents .day_content img{
+		#day #day_contents #content_wrapper{
 			display:block;
-			width:200px;
+			width:800px;
 		}
+			#day #day_contents #content_wrapper .day_content, #day #day_contents #content_wrapper .day_content img{
+				display:block;
+				width:200px;
+			}
