--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -3,6 +3,9 @@ body{
 	color:white;
 	font-family:'Cabin', arial, serif;
 }
+a{
+	text-decoration:none;
+}
 h1#title{
 	text-align:center;
 	font-size:3em;
@@ -72,3 +75,27 @@ h1#title a{
 				display:block;
 				width:200px;
 			}
+
+/*ADMIN*/
+#admin a.button{
+	display:block;
+	margin:0 auto;
+	font-weight:bold;
+	text-align:center;
+}
+#admin a.button.big{
+	width:150px;
+	font-size:1.5em;
+	color:white;
+	text-shadow:#143B61 1px 1px 0px;
+	background:#1E5994;
+	background-image: -moz-linear-gradient(top, #1E5994, #194A7B);
+	background-image: -webkit-gradient(linear, left top,left bottom, from(#1E5994), to(#194A7B));
+	background-image: linear-gradient(top, #1E5994, #194A7B);
+	border:solid 1px #1C5288;
+	border-radius:20px;
+	-webkit-border-radius:20px;
+	-moz-border-radius:20px;
+	box-shadow:#143B61 1px 1px 0px;
+	padding:10px 20px;
+}
